[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Common code for the server and client"
license = "MIT"
repository = "https://github.com/fabracht/network-tools"

[dependencies]
env_logger = "0.10"
libc = "0.2"
log = "0.4"
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
log4rs = "1.2"
message_macro = { path = "../message_macro/message_macro" }
