[package]
name = "network_commons"
version = "0.4.0"
edition = "2021"
description = "Low level code for the server and client applications"
license = "MIT"
repository = "https://github.com/fabracht/network-tests"

[dependencies]
libc = "0.2"
log = "0.4"
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
bebytes = "0.1"
