[package]
name = "twamp"
version = "0.1.0"
edition = "2021"
description = "Network-Tests TWAMP is a Rust project to support network tests used by the industry to monitor network quality and service assurance, currently implementing TWAMP (Two-Way Active Measurement Protocol) Light as per RFC 5357."
authors = ["Fabricio Bracht <fabracht@gmail.com>"]
license = "MIT"
repository = "https://github.com/fabracht/network-tests"


[dependencies]
libc = "0.2"
log = "0.4"
mio = { version = "0.8.5", features = ["os-poll", "net", "os-ext"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
network_commons = "0.1"
bebytes = "0.1"

[dev-dependencies]
log4rs = "1.2.0"
