[package]
name = "bebytes"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fabracht/network-tests/bebytes"
description = "A Rust library for serialization and deserialization of network structs."
readme = "README.md"
keywords = [
    "serialization",
    "deserialization",
    "network",
    "bytes",
    "big-endian",
]
categories = ["network-programming", "serialization"]

[[bin]]
name = "macro_test"
path = "./bin/macro_test.rs"

[dependencies]
bebytes_derive = "0.2"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
test-case = "3.0"
