[package]
name = "bebytes_derive"
description = "A macro to generate/parse binary representation of messages"
version = "0.2.1"
edition = "2021"
publish = true
license = "MIT"
repository = "https://github.com/fabracht/network-tools/message_macro/message_macro_derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
