[package]
name = "bebytes_derive"
description = "A macro to generate/parse binary representation of messages"
version = "0.2.6"
edition = "2021"
publish = true
license = "MIT"
repository = "https://github.com/fabracht/network-tests/tree/main/message_macro/bebytes_derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
