[package]
name = "message_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fabracht/network-tools"
publish = false

[[bin]]
name = "macro_test"
path = "./bin/macro_test.rs"

[dependencies]
message_macro_derive = { path = "../message_macro_derive" }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
test-case = "3.0"
