[package]
name = "message_macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/fabracht/network-tools"

[[bin]]
name = "macro_test"
path = "./bin/macro_test.rs"

[dependencies]
bebytes_derive = { path = "../bebytes_derive" }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
test-case = "3.0"
